# firmware-m4

./: README.md
_template/: CMakeLists.txt
_template/src/: gpio.c  main.c  main.h  stm32mp1xx_hal_conf.h
ressources/: STM32MP157AAAX_RAM.ld
src/Core/: ipcc.c  mbox_ipcc.c  mbox_ipcc.h  openamp.c  openamp.h  openamp_conf.h  openamp_log.c  openamp_log.h  rsc_table.c  rsc_table.h  stm32mp1xx_hal_msp.c  stm32mp1xx_it.c  stm32mp1xx_it.h
src/Drivers/CMSIS/Device/ST/STM32MP1xx/Include/: stm32mp1xx.h
